--- a/instructions.html
+++ b/instructions.html
@@ -41,46 +41,70 @@
 
                 <!--<p>There should always be an instruction before doing the actual evaluation of the interface.<p>
                     <p>Enter your instructions to your participant here. Diagrams and screenshots will be very helpful!</p>-->
+                <h2>Aim Of Experiment</h2>
+                <p>This experiment aims to compare two methods of copying and pasting text to determine which method is more efficient and preferable. The 2 methods in question are:</p>
+                <p>A) AutoComPaste, a technique that allows the user to type in the text they wish to copy and paste</p>
+                <p>B) The traditional method of using CTRL-C and CTRL-V to copy and paste text</p>
 
-                <p>The experiment will consist of 6 tasks for you to complete.</p>
-                <p>The technique that you are using, the granularity (the length of text to copy), the number of windows open and the trial number are given in a table on the left of the screen with the white background.</p>
-                <p>The text to be copied is highlighted in pink on the left side of the screen.</p>
-                <p>The text editor and articles to be used are given on the right side of the screen with the grey background.</p>
-                <p>The text that you need to copy can be found in the articles highlighted in yellow. Please refer to Figure 1 below.</p>
+                <h2>Procedure</h2>
+                <p>The first screen shown upon starting the experiment should be similar to that in Figure 1 below, excluding the green boxes and arrows.</p>
+                <p>Please take note of the information provided in the green boxes.</p>
 
-                <img src="Slide1.JPG" alt="Figure1" style="width:100%;height:auto;">
-                <center>Figure 1</center>
+                <img src="img/Slide1.PNG" alt="Figure1" style="width:100%;height:auto;">
+                <center>
+                    <h4>Figure 1</h4>
+                </center>
 
+                <h3>A) AutoComPaste</h3>
                 <p>You will first be tasked to use AutoComPaste to copy the selected text into the text editor.</p>
-                <p>To do so, click the text editor and start typing the text to copy. The text will appear in a dropdown box. Please refer to Figure 2 below.</p>
-
-                <img src="Slide2.JPG" alt="Figure2" style="width:100%;height:auto;">
-                <center>Figure 2</center>
-
+                <p>To do so, click the text editor and start typing the text to copy. The text will appear in a dropdown box.</p>
                 <p>To choose the text that you wish to copy, either click the text or press enter to paste the text highlighted in blue in the dropdown box into the text editor.</p>
+                <p>Please refer to Figure 2 below.</p>
+
+                <img src="img/Slide2.PNG" alt="Figure2" style="width:100%;height:auto;">
+                <center>
+                    <h4>Figure 2</h4>
+                </center>
+                <br>
+
+
                 <p>The result should look similar to that in Figure 3 below.</p>
+                <p>Once done, click the Next Task blue button and continue with the following tasks.</p>
+                <img src="img/Slide3.PNG" alt="Figure3" style="width:100%;height:auto;">
+                <center>
+                    <h4>Figure 3</h4>
+                </center>
 
-                <img src="Slide3.JPG" alt="Figure3" style="width:100%;height:auto;">
-                <center>Figure 3</center>
+                <h3>B) CTRL-C and CTRL-V</h3>
+                <p>You will also be required to use the traditional method of copying and pasting text by using CTRL-C and CTRL-V.</p>
+                <p>The screen should look like that in Figure 4.</p>
 
-                <p>Once done, click the Next Task blue button and continue with the next two tasks.</p>
-                <p>For the 4th task onwards, you will be required to use the traditional method of copying and pasting text, which is by using CTRL-C and CTRL-V. The screen should look like that in Figure 4.</p>
+                <img src="img/Slide4.PNG" alt="Figure4" style="width:100%;height:auto;">
+                <center>
+                    <h4>Figure 4</h4>
+                </center>
+                <br>
 
-                <img src="Slide4.JPG" alt="Figure4" style="width:100%;height:auto;">
-                <center>Figure 4</center>
+                <p>Continue by using CTRL-C and CTRL-V to copy and paste the required text into the text editor.</p>
+                <p>Please refer to Figure 5 below.</p>
 
-                <p>Continue by using CTRL-C and CTRL-V to copy and paste the required text into the text editor. Please refer to Figure 5 below.</p>
+                <img src="img/Slide5.PNG" alt="Figure5" style="width:100%;height:auto;">
+                <center>
+                    <h4>Figure 5</h4>
+                </center>
+                <br>
 
-                <img src="Slide5.JPG" alt="Figure5" style="width:100%;height:auto;">
-                <center>Figure 5</center>
+                <p>The end result should like the screen given in Figure 6.</p>
+                <p>Click the Next Task blue button to proceed with the next few tasks.</p>
 
-                <p>Paste the text into the text editor to complete the task. The end result should like the screen given in Figure 6. and click the Next Task blue button to proceed with the next few tasks.</p>
+                <img src="img/Slide6.PNG" alt="Figure6" style="width:100%;height:auto;">
+                <center>
+                    <h4>Figure 6</h4>
+                </center>
+                <br>
 
-                <img src="Slide6.JPG" alt="Figure6" style="width:100%;height:auto;">
-                <center>Figure 6</center>
+                <p>Once all the tasks are completed, please continue to fill up the post-experiment questionnaire.</p>
 
-                <p>Once all 6 tasks are completed, please continue to fill up the post-experiment questionnaire.</p>
-                <p>Thank you for your participation.</p>
 
 
                 <form class="form-inline">
