--- a/questionnaire-post.html
+++ b/questionnaire-post.html
@@ -40,7 +40,13 @@
                 <!--This part of the interface collects whatever post-experiment information. After the experiment, you want to collect more qualitative and quantitative feedback about the tested techniques. Some of the typical questions include, personal preferences, any difficulties participants experienced in the experiment, and areas of improvement. Please design a basic post-experimental questionnaire (no more than 10 questions).-->
 
                 <p>Participant No: <span class="js-pid pid"></span></p>
-                <p>Thank you for your participation in the experiment! Just one last thing before we can properly conclude the session. Please fill in the information for all the fields below.</p>
+                <p>Thank you for your participation in the experiment!</p>
+
+                <p>Just one last thing before we can properly conclude the session. Please fill in the information for all the fields below.</p>
+
+                <p>Information collected is strictly for experimental purposes only. All information will be kept confidential.</p>
+
+                <br>
 
                 <form id="post-expt-form">
 
@@ -195,6 +201,12 @@
                             <label>
                                 <input type="radio" name="q5" id="optionsRadios2" value="AutoComPaste">
                                 AutoComPaste
+                              </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="q5" id="optionsRadios3" value="Both or Neither">
+                                No preference/Both
                               </label>
                         </div>
                     </div>
