--- a/questionnaire-pre.html
+++ b/questionnaire-pre.html
@@ -40,7 +40,9 @@
                 <!-- This part of the interface collects whatever pre-experiment information. Please come up with a basic questionnaire to help you to gather participant information. The purpose of this questionnaire is to report the participant data and convince readers that you have picked an appropriate target user group and the result has certain generalizability. -->
                 <p>Participant Number: <span class="js-pid pid"></span></p>
 
-                <p>Hi! Thank you for agreeing to take part in the experiment. Before we proceed with the experiment proper, please fill in the information for all the fields below.</p>
+                <p>Before we proceed with the experiment proper, please fill in the information for all the fields below.</p>
+
+                <p>Information collected is strictly for experimental purposes only. All information will be kept confidential.</p>
 
                 <form id="pre-expt-form">
 
